hphp/test/zend/good/ext/standard/tests/misc/time_nanosleep_basic.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!function_exists('time_nanosleep')) die("skip");
if (getenv("SKIP_SLOW_TESTS")) die("skip slow test");
}
