hphp/test/zend/bad/ext/standard/tests/strings/str_pad_variation5.php.skipif
<?php
if (PHP_INT_SIZE != 4) die("skip this test is for 32bit platform only");
if (getenv("USE_ZEND_ALLOC") === "0") {
    die("skip Zend MM disabled");
}
?>